src/objects/shienirai__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>概要・商談テーマ・連絡事項</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>メイン担当者</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>支援を終了する</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MP_AIOpportunity_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AI商談</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MP_AIOpportunity_PL__c</fullName>
        <label>AI商談カテゴリ</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AI：(1)テーマ選定中</fullName>
                </value>
                <value>
                    <fullName>AI：(2)コールセンター</fullName>
                </value>
                <value>
                    <fullName>AI：(3)ナレッジ活用</fullName>
                </value>
                <value>
                    <fullName>AI：(4)ものづくり</fullName>
                </value>
                <value>
                    <fullName>AI：(5)保守保全</fullName>
                </value>
                <value>
                    <fullName>AI：(6)需要予測・マーケティング</fullName>
                </value>
                <value>
                    <fullName>AI：(9)その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_AnkenJuyodo__c</fullName>
        <description>Fujitsu-CRM</description>
        <label>案件重要度</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>本部</fullName>
                </value>
                <value>
                    <fullName>統括/支社</fullName>
                </value>
                <value>
                    <fullName>部/支店</fullName>
                </value>
                <value>
                    <fullName>重要</fullName>
                </value>
                <value>
                    <fullName>普通</fullName>
                </value>
                <value>
                    <fullName>低い</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_CloseDateWfDT__c</fullName>
        <description>プロセスビルダーで自動設定</description>
        <label>完了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MP_CloseFiscalYear_PL__c</fullName>
        <label>完了年度</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2016年</fullName>
                </value>
                <value>
                    <fullName>2017年</fullName>
                </value>
                <value>
                    <fullName>2018年</fullName>
                </value>
                <value>
                    <fullName>2019年</fullName>
                </value>
                <value>
                    <fullName>2020年</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_CloudShare_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>クラウド共有フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MP_CompetingVendors_ML__c</fullName>
        <label>競合ベンダ</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>競合無し</fullName>
                </value>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>NEC</fullName>
                </value>
                <value>
                    <fullName>日立</fullName>
                </value>
                <value>
                    <fullName>日立ソリューションズ</fullName>
                </value>
                <value>
                    <fullName>東芝</fullName>
                </value>
                <value>
                    <fullName>DELL</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>NTT東</fullName>
                </value>
                <value>
                    <fullName>NTT西</fullName>
                </value>
                <value>
                    <fullName>NTTデータ</fullName>
                </value>
                <value>
                    <fullName>NTTコミュニケーションズ</fullName>
                </value>
                <value>
                    <fullName>NTTコムウェア</fullName>
                </value>
                <value>
                    <fullName>NTTセキュリティ</fullName>
                </value>
                <value>
                    <fullName>NTT他</fullName>
                </value>
                <value>
                    <fullName>ラック</fullName>
                </value>
                <value>
                    <fullName>丸紅情報システムズ</fullName>
                </value>
                <value>
                    <fullName>CTC</fullName>
                </value>
                <value>
                    <fullName>インテック</fullName>
                </value>
                <value>
                    <fullName>シマンテック</fullName>
                </value>
                <value>
                    <fullName>ﾊﾟﾅｿﾆｯｸｼｽﾃﾑﾈｯﾄﾜｰｸｽ</fullName>
                </value>
                <value>
                    <fullName>日本ユニシス</fullName>
                </value>
                <value>
                    <fullName>三菱電機</fullName>
                </value>
                <value>
                    <fullName>三菱電機ｲﾝﾌｫﾒｰｼｮﾝｼｽﾃﾑｽﾞ</fullName>
                </value>
                <value>
                    <fullName>TIS</fullName>
                </value>
                <value>
                    <fullName>三菱総研DCS</fullName>
                </value>
                <value>
                    <fullName>マイクロソフト</fullName>
                </value>
                <value>
                    <fullName>IIJ</fullName>
                </value>
                <value>
                    <fullName>NRI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_Competitors_PL__c</fullName>
        <label>競合先</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>競合先A社</fullName>
                </value>
                <value>
                    <fullName>競合先B社</fullName>
                </value>
                <value>
                    <fullName>競合先C社</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_CompleteStatus_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>完了フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MP_DA_Category__c</fullName>
        <label>デジタルアニーラ商談カテゴリ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DA：(1)製造</fullName>
                </value>
                <value>
                    <fullName>DA：(2)流通</fullName>
                </value>
                <value>
                    <fullName>DA：(3)金融</fullName>
                </value>
                <value>
                    <fullName>DA：(4)公共</fullName>
                </value>
                <value>
                    <fullName>DA：(5)情報</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ニーズの確認完了</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MP_ExistingVendor_ML__c</fullName>
        <label>既存ベンダー</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>NEC</fullName>
                </value>
                <value>
                    <fullName>日立</fullName>
                </value>
                <value>
                    <fullName>東芝</fullName>
                </value>
                <value>
                    <fullName>DELL</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>NTTデータ</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
                <value>
                    <fullName>富士通</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_FinaceCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>要確認</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MP_FinanceStatus_PL__c</fullName>
        <label>ステータス</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>種まき</fullName>
                </value>
                <value>
                    <fullName>プレ対応</fullName>
                </value>
                <value>
                    <fullName>RFI回答作成中</fullName>
                </value>
                <value>
                    <fullName>RFI回答済み</fullName>
                </value>
                <value>
                    <fullName>RFP回答作成中</fullName>
                </value>
                <value>
                    <fullName>RFP回答後フォロー</fullName>
                </value>
                <value>
                    <fullName>提案中</fullName>
                </value>
                <value>
                    <fullName>内示</fullName>
                </value>
                <value>
                    <fullName>受注</fullName>
                </value>
                <value>
                    <fullName>消滅</fullName>
                </value>
                <value>
                    <fullName>停滞</fullName>
                </value>
                <value>
                    <fullName>敗退</fullName>
                </value>
                <value>
                    <fullName>構成チェック</fullName>
                </value>
                <value>
                    <fullName>構成作成</fullName>
                </value>
                <value>
                    <fullName>見積り</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_GlobalShodan__c</fullName>
        <description>Fujitsu-CRM</description>
        <label>グローバル商談</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>海外契約</fullName>
                </value>
                <value>
                    <fullName>国内契約</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_HanbaiKeitai__c</fullName>
        <description>Fujitsu-CRM</description>
        <label>販売形態</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>直販</fullName>
                </value>
                <value>
                    <fullName>仕切</fullName>
                </value>
                <value>
                    <fullName>準仕切</fullName>
                </value>
                <value>
                    <fullName>手数料</fullName>
                </value>
                <value>
                    <fullName>準手数料</fullName>
                </value>
                <value>
                    <fullName>中間仕切</fullName>
                </value>
                <value>
                    <fullName>関係会社自主ビ</fullName>
                </value>
                <value>
                    <fullName>海外設置商談</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_InitialSalesDate_DT__c</fullName>
        <label>初回売上予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MP_KadoYotei_Date__c</fullName>
        <description>Fujitsu-CRM</description>
        <label>稼動予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MP_KeiyakuKeitai__c</fullName>
        <description>Fujitsu-CRM</description>
        <label>契約形態</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>海外システム日本集約</fullName>
                </value>
                <value>
                    <fullName>海外システムの企画/設計/開発/保守</fullName>
                </value>
                <value>
                    <fullName>日本を含むグローバルシステム</fullName>
                </value>
                <value>
                    <fullName>日本国内のクラウドを国内契約で提供し、顧客が海外から利用</fullName>
                </value>
                <value>
                    <fullName>海外のクラウド・サービスを日本で契約</fullName>
                </value>
                <value>
                    <fullName>海外から利用されるデータセンター商談</fullName>
                </value>
                <value>
                    <fullName>海外から利用されるサーバー商談</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_KeiyakuKyoten__c</fullName>
        <description>Fujitsu-CRM</description>
        <label>契約拠点</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fujitsu Japan</fullName>
                </value>
                <value>
                    <fullName>FAPL</fullName>
                </value>
                <value>
                    <fullName>FTH</fullName>
                </value>
                <value>
                    <fullName>FMS</fullName>
                </value>
                <value>
                    <fullName>FID</fullName>
                </value>
                <value>
                    <fullName>FVL</fullName>
                </value>
                <value>
                    <fullName>FPI</fullName>
                </value>
                <value>
                    <fullName>FCH</fullName>
                </value>
                <value>
                    <fullName>FHK</fullName>
                </value>
                <value>
                    <fullName>FTL</fullName>
                </value>
                <value>
                    <fullName>FKL</fullName>
                </value>
                <value>
                    <fullName>FCIPL</fullName>
                </value>
                <value>
                    <fullName>FIPL</fullName>
                </value>
                <value>
                    <fullName>FAI</fullName>
                </value>
                <value>
                    <fullName>FBR</fullName>
                </value>
                <value>
                    <fullName>FS</fullName>
                </value>
                <value>
                    <fullName>FTS</fullName>
                </value>
                <value>
                    <fullName>FAL</fullName>
                </value>
                <value>
                    <fullName>FNZ</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_Keiyakuyotei_Date__c</fullName>
        <description>Fujitsu-CRM</description>
        <label>契約予定日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MP_Kikaihakken__c</fullName>
        <label>機会発見のきっかけ</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>マーケティング＆プロモーション</fullName>
                </value>
                <value>
                    <fullName>ACP/仮説提案</fullName>
                </value>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>ユーザ引き合い</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_Last_Action__c</fullName>
        <label>最終対応日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MP_Loss_Reason__c</fullName>
        <label>失注理由</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>競合に敗退</fullName>
                </value>
                <value>
                    <fullName>機能不足</fullName>
                </value>
                <value>
                    <fullName>先送り / 無回答</fullName>
                </value>
                <value>
                    <fullName>価格</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_LostReason_PL__c</fullName>
        <label>勝敗原因</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>価格</fullName>
                </value>
                <value>
                    <fullName>営業力</fullName>
                </value>
                <value>
                    <fullName>提案ソリューション</fullName>
                </value>
                <value>
                    <fullName>商品力</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_NFCCommon_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>共有設定のためプロセスビルダーで自動設定</description>
        <label>NFC共有フラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MP_NSPOpportunity_FLG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>共有設定のためプロセスビルダーで自動設定</description>
        <label>NSP商談</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MP_NSPShareSection__c</fullName>
        <description>共有設定のためプロセスビルダーで自動設定</description>
        <label>NSP用業種・地域</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>産業</fullName>
                </value>
                <value>
                    <fullName>流通</fullName>
                </value>
                <value>
                    <fullName>金融</fullName>
                </value>
                <value>
                    <fullName>社会基盤</fullName>
                </value>
                <value>
                    <fullName>公共</fullName>
                </value>
                <value>
                    <fullName>北海道</fullName>
                </value>
                <value>
                    <fullName>東北</fullName>
                </value>
                <value>
                    <fullName>関東</fullName>
                </value>
                <value>
                    <fullName>長野</fullName>
                </value>
                <value>
                    <fullName>新潟</fullName>
                </value>
                <value>
                    <fullName>首都圏</fullName>
                </value>
                <value>
                    <fullName>中部</fullName>
                </value>
                <value>
                    <fullName>関西</fullName>
                </value>
                <value>
                    <fullName>中国</fullName>
                </value>
                <value>
                    <fullName>四国</fullName>
                </value>
                <value>
                    <fullName>九州</fullName>
                </value>
                <value>
                    <fullName>東京</fullName>
                </value>
                <value>
                    <fullName>千葉</fullName>
                </value>
                <value>
                    <fullName>神奈川</fullName>
                </value>
                <value>
                    <fullName>汐留</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_OppptuityType_ML__c</fullName>
        <label>商談区分</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>自主</fullName>
                </value>
                <value>
                    <fullName>Valuetsu</fullName>
                </value>
                <value>
                    <fullName>相談</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_OrderAccuracy_PL__c</fullName>
        <label>受注確度</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>E3</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>Z</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_OrdersForm_PL__c</fullName>
        <label>受注形態</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>自社リ</fullName>
                </value>
                <value>
                    <fullName>自社増</fullName>
                </value>
                <value>
                    <fullName>他社リ</fullName>
                </value>
                <value>
                    <fullName>新規</fullName>
                </value>
                <value>
                    <fullName>不明</fullName>
                </value>
                <value>
                    <fullName>自社</fullName>
                </value>
                <value>
                    <fullName>自社（既存）</fullName>
                </value>
                <value>
                    <fullName>自社（新規）</fullName>
                </value>
                <value>
                    <fullName>他社</fullName>
                </value>
                <value>
                    <fullName>自社既</fullName>
                </value>
                <value>
                    <fullName>他社既</fullName>
                </value>
                <value>
                    <fullName>契約変</fullName>
                </value>
                <value>
                    <fullName>他リ</fullName>
                </value>
                <value>
                    <fullName>自リ</fullName>
                </value>
                <value>
                    <fullName>自増</fullName>
                </value>
                <value>
                    <fullName>追加</fullName>
                </value>
                <value>
                    <fullName>自社新規</fullName>
                </value>
                <value>
                    <fullName>自社リプレース</fullName>
                </value>
                <value>
                    <fullName>自社新規システム</fullName>
                </value>
                <value>
                    <fullName>他社リプレース</fullName>
                </value>
                <value>
                    <fullName>自社追加案件</fullName>
                </value>
                <value>
                    <fullName>他社新規システム</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_OrdersVendor_PL__c</fullName>
        <label>受注ベンダー</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>NEC</fullName>
                </value>
                <value>
                    <fullName>日立</fullName>
                </value>
                <value>
                    <fullName>日立ソリューションズ</fullName>
                </value>
                <value>
                    <fullName>東芝</fullName>
                </value>
                <value>
                    <fullName>DELL</fullName>
                </value>
                <value>
                    <fullName>HP</fullName>
                </value>
                <value>
                    <fullName>NTT東</fullName>
                </value>
                <value>
                    <fullName>NTT西</fullName>
                </value>
                <value>
                    <fullName>NTTデータ</fullName>
                </value>
                <value>
                    <fullName>NTTコミュニケーションズ</fullName>
                </value>
                <value>
                    <fullName>NTTコムウェア</fullName>
                </value>
                <value>
                    <fullName>NTTセキュリティ</fullName>
                </value>
                <value>
                    <fullName>NTT他</fullName>
                </value>
                <value>
                    <fullName>ラック</fullName>
                </value>
                <value>
                    <fullName>丸紅情報システムズ</fullName>
                </value>
                <value>
                    <fullName>CTC</fullName>
                </value>
                <value>
                    <fullName>インテック</fullName>
                </value>
                <value>
                    <fullName>シマンテック</fullName>
                </value>
                <value>
                    <fullName>パナソニックシステムネットワークス</fullName>
                </value>
                <value>
                    <fullName>日本ユニシス</fullName>
                </value>
                <value>
                    <fullName>三菱電機</fullName>
                </value>
                <value>
                    <fullName>三菱電機インフォメーションシステムズ</fullName>
                </value>
                <value>
                    <fullName>TIS</fullName>
                </value>
                <value>
                    <fullName>三菱総研DCS</fullName>
                </value>
                <value>
                    <fullName>マイクロソフト</fullName>
                </value>
                <value>
                    <fullName>IIJ</fullName>
                </value>
                <value>
                    <fullName>NRI</fullName>
                </value>
                <value>
                    <fullName>NRIセキュアテクノロジーズ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_OutcomeReasonClass_PL__c</fullName>
        <label>勝敗理由小分類</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>【成約】契約継続／既存顧客のために競合せず</fullName>
                </value>
                <value>
                    <fullName>【成約】顧客のベンダ乗り換えのために競合せず</fullName>
                </value>
                <value>
                    <fullName>【成約】検証導入のために競合せず</fullName>
                </value>
                <value>
                    <fullName>【成約】トップ攻略／リレーションにより競合せず</fullName>
                </value>
                <value>
                    <fullName>【成約】ベンダーハイタッチ案件にて競合せず</fullName>
                </value>
                <value>
                    <fullName>【成約】提案内容の要件に対するレベルを評価</fullName>
                </value>
                <value>
                    <fullName>【成約】提案内容の先進性を評価</fullName>
                </value>
                <value>
                    <fullName>【成約】提案内容の実現力を評価</fullName>
                </value>
                <value>
                    <fullName>【成約】製品・サービスの機能を評価</fullName>
                </value>
                <value>
                    <fullName>【成約】製品・サービスの将来性を評価</fullName>
                </value>
                <value>
                    <fullName>【成約】営業・SEの能力を評価</fullName>
                </value>
                <value>
                    <fullName>【成約】営業・SEのコミュニケーションを評価</fullName>
                </value>
                <value>
                    <fullName>【成約】過去からの信用を評価</fullName>
                </value>
                <value>
                    <fullName>【成約】将来的な投資として評価</fullName>
                </value>
                <value>
                    <fullName>【成約】価格面を評価</fullName>
                </value>
                <value>
                    <fullName>【成約】契約条件を評価</fullName>
                </value>
                <value>
                    <fullName>【成約】その他（富士通要因）</fullName>
                </value>
                <value>
                    <fullName>【成約】その他（顧客要因）</fullName>
                </value>
                <value>
                    <fullName>【敗退】顧客既存ベンダーが有利な仕様を埋め込み敗退</fullName>
                </value>
                <value>
                    <fullName>【敗退】顧客とリレーションシップが弱く情報が入手できず敗退</fullName>
                </value>
                <value>
                    <fullName>【敗退】顧客要件を満たせず敗退</fullName>
                </value>
                <value>
                    <fullName>【敗退】提案内容が先進的でないため敗退</fullName>
                </value>
                <value>
                    <fullName>【敗退】導入/運用実績不足による提案内容の差で敗退</fullName>
                </value>
                <value>
                    <fullName>【敗退】管理機能不足により敗退</fullName>
                </value>
                <value>
                    <fullName>【敗退】メインの機能不足により敗退</fullName>
                </value>
                <value>
                    <fullName>【敗退】サービスの機能不足により敗退</fullName>
                </value>
                <value>
                    <fullName>【敗退】製品・サービスの魅力が不足のため敗退</fullName>
                </value>
                <value>
                    <fullName>【敗退】営業・SEの能力が不足のため敗退</fullName>
                </value>
                <value>
                    <fullName>【敗退】営業・SEに対する信頼が不足のため敗退</fullName>
                </value>
                <value>
                    <fullName>【敗退】過去からの信用のため敗退</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_OutcomeReason_PL__c</fullName>
        <label>勝敗理由</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>【成約】競合せず</fullName>
                </value>
                <value>
                    <fullName>【成約】提案内容の要件に対するレベルを評価</fullName>
                </value>
                <value>
                    <fullName>【成約】提案内容の先進性を評価</fullName>
                </value>
                <value>
                    <fullName>【成約】提案内容の実現力を評価</fullName>
                </value>
                <value>
                    <fullName>【成約】製品・サービスの機能を評価</fullName>
                </value>
                <value>
                    <fullName>【成約】製品・サービスの将来性を評価</fullName>
                </value>
                <value>
                    <fullName>【成約】営業・SEの能力を評価</fullName>
                </value>
                <value>
                    <fullName>【成約】営業・SEのコミュニケーションを評価</fullName>
                </value>
                <value>
                    <fullName>【成約】過去からの信用を評価</fullName>
                </value>
                <value>
                    <fullName>【成約】将来的な投資として評価</fullName>
                </value>
                <value>
                    <fullName>【成約】価格面を評価</fullName>
                </value>
                <value>
                    <fullName>【成約】契約条件を評価</fullName>
                </value>
                <value>
                    <fullName>【成約】その他</fullName>
                </value>
                <value>
                    <fullName>【敗退】提案内容が要件を満たさない</fullName>
                </value>
                <value>
                    <fullName>【敗退】提案内容が先進的でない</fullName>
                </value>
                <value>
                    <fullName>【敗退】提案内容の実現力に懸念</fullName>
                </value>
                <value>
                    <fullName>【敗退】製品・サービスの機能が不足</fullName>
                </value>
                <value>
                    <fullName>【敗退】製品・サービスの魅力が不足</fullName>
                </value>
                <value>
                    <fullName>【敗退】営業・SEの能力が不足</fullName>
                </value>
                <value>
                    <fullName>【敗退】営業・SEに対する信頼が不足</fullName>
                </value>
                <value>
                    <fullName>【敗退】過去からの信用</fullName>
                </value>
                <value>
                    <fullName>【敗退】将来的なパートナーとして力量不足</fullName>
                </value>
                <value>
                    <fullName>【敗退】価格面（初期投資）</fullName>
                </value>
                <value>
                    <fullName>【敗退】価格面（ランニングコスト）</fullName>
                </value>
                <value>
                    <fullName>【敗退】契約条件</fullName>
                </value>
                <value>
                    <fullName>【敗退】総合評価・総合評価点</fullName>
                </value>
                <value>
                    <fullName>【敗退】既存ベンダーのリレーションが強力</fullName>
                </value>
                <value>
                    <fullName>【敗退】理由明言されず</fullName>
                </value>
                <value>
                    <fullName>【敗退】その他</fullName>
                </value>
                <value>
                    <fullName>【消滅】営業判断で商談化せず</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MP_OwnDepartmentOrderPlanAmounts_YEN_CUR__c</fullName>
        <label>自部門受注予定金額（円）</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>